--- a/src/public/form.html
+++ b/src/public/form.html
@@ -11,6 +11,83 @@
     <title>Porygon Seguridad Informatica</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar bg-body-tertiary navbar-expand-sm px-3 border-bottom border-bottom-dark">
+          <div class="container-fluid">
+            <div class="imgBrand">
+              <a class="navbar-brand" href="./index.html">
+                <img src="../img/Porygon Logo.jpg" alt="" width="30" height="50" class="d-inline-block align-text-top">
+                <img src="../img/Porygon tipo 2.jpg" alt="" width="100" height="50" class="d-inline-block align-text-top">
+              </a>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 80px;">
+                <li class="nav-item">
+                  <button class="btn btn-sm btn-outline-success">
+                    <a class="nav-link" href="#scrollspyHeading1">First</a>
+                  </button>
+                </li>
+                <li class="nav-item">
+                  <button class="btn btn-sm btn-outline-success">
+                    <a class="nav-link" type="button" href="#scrollspyHeading2">Second</a>
+                  </button>
+                </li>
+                <li class="nav-item">
+                  <div class="accordion accordion-flush" id="accordionFlush">
+                    <div class="accordion-item">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        Servicios
+                      </button>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
     
-</body>
-</html>
+        <div id="flush-collapseOne" class="accordion-collapse collapse border-bottom-dark" data-bs-parent="#accordionFlush">
+          <div class="accordion-body border-bottom-dark">
+            <a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
+            <a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
+            <a class="dropdown-item" href="#scrollspyHeading5">Fifth</a></li>
+          </div>
+        </div>
+      </header>
+
+    <h1>Contacto</h1>
+
+    <form class="row g-3 needs-validation" novalidate>
+        <div class="col-md-4">
+          <label for="validationCustom01" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+          <div class="invalid-feedback">
+            Completa este campo
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustom02" class="form-label">Apellido</label>
+          <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+          <div class="invalid-feedback">
+            Completa este campo
+          </div>
+        </div>
+        <div class="mb-3">
+            <label for="validationTextarea" class="form-label">Comentario</label>
+            <textarea class="form-control" id="validationTextarea" placeholder="Required example textarea" required></textarea>
+            <div class="invalid-feedback">
+              Completa este campo
+            </div>
+          </div>
+        <div class="col-12">
+          <button class="btn btn-primary" type="submit">Submit form</button>
+        </div>
+      </form>
+        
+    </body>
+    </html>
